metadata/force-app/main/default/objects/CustomName_NRybF__c/CustomName_NRybF__c.object-meta.xml
<CustomObject>
    <description>Description_cHYCW</description>
    <label>CustomLabel_cxmej</label>
    <nameField>
        <label>CustomLabel_cxmej</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_cxmejs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>