metadata/force-app/main/default/objects/CustomName_NRybF__c/fields/CustomField_sLzQd__c.field-meta.xml
<CustomField>
    <fullName>CustomField_sLzQd__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldlQOpD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>